--- a/gb/21/9/28/n13267533.md
+++ b/gb/21/9/28/n13267533.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjmocf3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大房市高度脆弱 安省名列之首</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13267684-IMG_0730-600x400.jpeg" />
 <h6></h6>
 <hr>
 <p>【大纪元2021年09月29日讯】（大纪元记者周行多伦多报导）加拿大抵押和住房公司（CMHC）周二表示，全国整体的住房市场，在今年第二季度从中度脆弱上升为高度脆弱，其中多伦多、渥太华和蒙特利尔房市名列高度脆弱房市之列。</p>
 <p>联邦住房机构将脆弱性升级归因于全国价格上涨和高估，并表示这种转变在很大程度上反映了安省和加拿大东部几个住房市场的持续失衡加剧。</p>
-<p>CMHC的最新房市评估报告说：“随着<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>进一步脱离劳工收入等基本因素，房价加速上涨，房产价值持续被高估，导致加拿大房地产市场高度脆弱。”</p>
-<p>抵押和住房公司的统计数据显示，在全国范围内，<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>加速上涨的状况从今年3月报告的低程度，变成9月份报告的中等程度；房市脆弱度则从3月份报告的中等程度升至9月份的高等程度。</p>
+<p>CMHC的最新房市评估报告说：“随着<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>进一步脱离劳工收入等基本因素，房价加速上涨，房产价值持续被高估，导致加拿大房地产市场高度脆弱。”</p>
+<p>抵押和住房公司的统计数据显示，在全国范围内，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>加速上涨的状况从今年3月报告的低程度，变成9月份报告的中等程度；房市脆弱度则从3月份报告的中等程度升至9月份的高等程度。</p>
 <p>该季度评估基于四个因素——过热、价格加速、高估和库存状况，为全国 15 个主要城市分配了低、中或高的脆弱性评级。</p>
 <p>如果这些因素变得不平衡或多个领域的风险同时增加，该机构认为市场可能更容易受到问题的影响，人们可能会开始为抵押贷款而苦苦挣扎。</p>
 <p>抵押和住房公司认为，处于历史低位的利率、政府的各种支持及大规模疫苗接种计划的推出，在2021年上半年为加拿大人提供了更高的可支配收入和就业水平，从而推高了购买力。“但是，这些改善的基础因素，并不能完全解释最近的房价上涨。”</p>
@@ -22,7 +22,7 @@
 <p>哈利法克斯（Halifax）和蒙克顿（Moncton）房市都是继续保持在高度脆弱的状态。哈利法克斯房市仍然过热，因为住房供应有限导致卖方市场，给房价带来了上行压力。在蒙克顿，房价在2021年持续继续上涨，年初至今上升了23%，这反映了住房供应与需求之间的潜在脱节。</p>
 <p>温哥华是全国唯一的一个市场脆弱性下降的房市，从中度降至低度。该房市销售速度放缓，价格增长已经趋于稳定。更多房产挂牌待售，缓解了买家之间的竞争。</p>
 <h2>家庭负债2.5万亿元 超过GDP</h2>
-<p><ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E6%88%BF%E5%B8%82.md#1">加拿大房市</a>处于高度脆弱之时，其实全国的家庭已经负债累累，整体负债甚至超过了经济的年产出。加拿大统计局的数据显示，2021年第二季度国内生产总值 (GDP) 出现温和的季度增长，但与家庭债务的增长显然是相形见绌。</p>
+<p><ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E6%88%BF%E5%B8%82.md#1">加拿大房市</a>处于高度脆弱之时，其实全国的家庭已经负债累累，整体负债甚至超过了经济的年产出。加拿大统计局的数据显示，2021年第二季度国内生产总值 (GDP) 出现温和的季度增长，但与家庭债务的增长显然是相形见绌。</p>
 <p>即使消费者信贷增长相对较低，但加拿大家庭债务仍在飙升，2021年第二季度经季节性调整的未偿还信贷高达2.53万亿元，比上一季度增长2.53%，这几乎完全是由抵押房贷驱动的，抵押贷款现在已达到家庭债务的68.7%。这是自1990年代初的房市泡沫以来，抵押贷款在家庭债务中所占的最高比例。</p>
 <p>加拿大家庭的借贷速度远远快于国内生产总值的增长速度。2021年第二季度的国内生产总值经季节性调整后达到2.46万亿元，比上一季度增长1.92%。该季度增长比家庭信贷增长幅度慢了约20%。</p>
 <p>现在，加拿大家庭债务已经高于国内生产总值，两者的比例在2021年第二季度达到102.90%，高于上一季度的102.28%。也就是说，信贷增长强于经济增长，加拿大的经济体已变得更加依赖债务来增长。</p>
@@ -32,47 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/17/n13240319.md#1">加拿大各省最新疫情数据 （11月15日）</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/26/n13262216.md#1">富豪报告：2020年加拿大亿万富豪增多</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/26/n13262308.md#1">两迈克尔回国 加拿大仍有115人遭中共关押</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/27/n13263462.md#1">孟晚舟回国后 在华被判死刑加拿大人会见律师</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/27/n13264424.md#1">加拿大就业保险新规9月26日生效</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/27/n13264563.md#1">加拿大外长：对中共睁大眼睛 采用四重策略</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/27/n13265007.md#1">加拿大各省应对学校COVID-19爆发指南</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/23/n13391916.md#1">加拿大重新允许越境难民进加国寻求庇护</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13391894.md#1">卑诗省暴雨致泥石流损坏住宅 保险不赔</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13391644.md#1">强制疫苗政策生效 多伦多逾300教师无薪休假</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/17/n13240319.md#1">加拿大各省最新疫情数据 （11月15日）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/26/n13262216.md#1">富豪报告：2020年加拿大亿万富豪增多</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/26/n13262308.md#1">两迈克尔回国 加拿大仍有115人遭中共关押</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/27/n13263462.md#1">孟晚舟回国后 在华被判死刑加拿大人会见律师</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/27/n13264424.md#1">加拿大就业保险新规9月26日生效</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/27/n13264563.md#1">加拿大外长：对中共睁大眼睛 采用四重策略</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/9/27/n13265007.md#1">加拿大各省应对学校COVID-19爆发指南</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13753000.md#1">加拿大大部分地区油价下周继续飙升</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752967.md#1">查档案需2100万 加拿大研究员或要等65年</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752958.md#1">猴痘和严重肝炎引起病毒再次爆发担忧</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894912.md#1" target="_blank">毛泽东诗词被党媒“高级黑”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389736.md#1">【军事热点】美日海军反潜战演习意在牵制中共</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13391433.md#1">【新闻大家谈】3天让彭帅4露面 中共会抛张高丽？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同扶养小孩</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13383432.md#1">一表看懂男性雄激素 衰老主要原因和它有关</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/28/n13267533.htm">加拿大房市高度脆弱 安省名列之首</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/28/n13267533.htm">加拿大房市高度脆弱 安省名列之首</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjmocf3555/djy/blob/master/gb/21/9/28/n13267533.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/9/28/n13267533.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
